# tokscale

./: Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh-cn.md  package.json
.github/workflows/: launcher_validation.yml
crates/tokscale-cli/src/: main.rs
crates/tokscale-cli/src/commands/: wrapped.rs
crates/tokscale-cli/src/tui/: app.rs  cache.rs  client_ui.rs  colors.rs  config.rs  mod.rs  settings.rs
crates/tokscale-cli/src/tui/data/: mod.rs
crates/tokscale-cli/src/tui/ui/: overview.rs  stats.rs  widgets.rs
crates/tokscale-cli/tests/: cli_tests.rs
crates/tokscale-core/src/: clients.rs  lib.rs  message_cache.rs  provider_identity.rs  scanner.rs
crates/tokscale-core/src/sessions/: claudecode.rs  codex.rs  kilocode.rs  mod.rs  mux.rs  opencode.rs  roocode.rs  synthetic.rs
scripts/: test-package-launchers.sh
