[workspace]
resolver = "2"
members = [
    "crates/tokscale-core",
    "crates/tokscale-cli",
]

[workspace.package]
version = "2.0.26"
edition = "2021"
authors = ["Junho Yeo <hello@junho.io>"]
license = "MIT"
repository = "https://github.com/junhoyeo/tokscale"

[workspace.dependencies]
# Internal crates
tokscale-core = { path = "crates/tokscale-core" }

# Parallelism
rayon = "1.10"

# JSON parsing (with SIMD acceleration)
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# TOML config parsing
toml = "0.8"

# File system traversal
walkdir = "2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1.0"
libc = "0.2"

# HTTP client (async)
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }

# For disk caching (XDG paths)
dirs = "5"

# SQLite database support (bundled for cross-compilation)
rusqlite = { version = "0.32", features = ["bundled"] }

# Lazy static initialization
once_cell = "1"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async utilities
tokio-stream = "0.1"
futures = "0.3"

# Table output for non-TUI mode
comfy-table = "7"

# Terminal colors
colored = "2"

# Progress indicators
indicatif = "0.17"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
fs2 = "0.4"

# Clipboard
arboard = "3"

# Unix signal handling
signal-hook = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
